My Django Girls app,

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,15 +7,6 @@
 			<h1><a href="">Suhyun's Blog</a></h1>
 		</div>
 
-		<div>
-			<p>published: 26.01.2018, 10:45</p>
-			<h2><a href="">My first post</a></h2>
-			<p>Toto lo que imaginar es real</p>
-		</div>
-		<div>
-			<p>published: 26.01.2018, 10:46</p>
-			<h2><a href="">My second post</a></h2>
-			<p>Why are you so serious?</p>
-		</div>
+		{{posts}}
 	</body>
 </html>
