--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,8 +5,13 @@
 	<body>
 		<div>
 			<h1><a href="">Suhyun's Blog</a></h1>
-		</div>
-
-		{{posts}}
+		</div>	
+		{% for post in posts %}
+			<div>
+				<h1><a href="">{{post.title}}</a></h1>
+				<p>{{post.text|linebreaksbr}}</p>
+				<p>published: {{post.published_data}}</p>
+			</div>
+		{% endfor %}
 	</body>
 </html>
