--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,13 @@
-<html>
-	<head>
-		<title>Suhyun's Blog</title>
-	</head>
-	<body>
-		<div>
-			<h1><a href="">Suhyun's Blog</a></h1>
-		</div>	
-		{% for post in posts %}
-			<div>
-				<h1><a href="">{{post.title}}</a></h1>
-				<p>{{post.text|linebreaksbr}}</p>
-				<p>published: {{post.published_data}}</p>
-			</div>
-		{% endfor %}
-	</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_data }}
+            </div>
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
